--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,11 @@
     <string name="swipe_tabs">Swipe Tabs</string>
     <string name="recycler_view">Recycler View</string>
     <string name="retrofit">Retrofit</string>
+    <string name="bottom_navigation">Bottom Navigation</string>
+    <string name="home">Home</string>
+    <string name="favorites">Favorites</string>
+    <string name="map">Map</string>
+    <string name="music">Music</string>
+    <string name="schedule">Schedule</string>
+    <string name="home_fragment">Home</string>
 </resources>
